<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.logic2j</groupId>
  <artifactId>logic2j-api</artifactId>
  <version>1.3.0</version>

  <properties>
    <slf4j-api.version>2.0.12</slf4j-api.version>
    <logback-classic.version>1.5.6</logback-classic.version>

    <junit.version>4.13.2</junit.version>
    <assertj.version>3.26.3</assertj.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release> <!-- New way to configure cross-compiling -->
    <maven.compiler.source>21</maven.compiler.source> <!-- IntelliJ will autoconfigure module source compatibility from this maven property -->
    <maven.compiler.target>21</maven.compiler.target> <!-- IntelliJ will autoconfigure module source compatibility from this maven property -->

    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j-api.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback-classic.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- Package sources and javadocs -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>maven_central</id>
      <name>Maven Central</name>
      <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>ltettoni Maven Packages on GitHub</name>
      <url>https://maven.pkg.github.com/ltettoni/logic2j-api</url>
    </repository>
  </distributionManagement>

</project>
